# draft-detective

./: .cursorrules  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  citation_categorizer_comparison_complete.json  dev.py  inference_validator_v2_test.py  pyproject.toml  railway.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/commands/: code-review.md  pull-request-description.md
.cursor/plans/: five_level_inference_judge_scale.plan.md  inference_performance_table_and_batch.plan.md  informal_argument_inferential_errors_6791ff52.plan.md
.github/scripts/: collect-prs.js  generate-changelog.js  update-changelog.sh
.github/workflows/: backend.yml  bump-version.yml  claude-code-review.yml  claude.yml  deploy-dev.yml  deploy-production.yml  release-changelog.yml  security.yml
addin/: .gitignore  README.md  manifest-dev.xml  manifest-template.xml  manifest.xml  ngrok.yaml
alembic/: env.py
alembic/versions/: 01a7c2a05b7d_add_workflow_progress_table.py  063d05606fe7_add_project_to_workflow.py  1cc768ae2623_add_feedback_visibility_to_projects.py  1d6c512c344f_add_start_line_end_line_to_issues.py  1dc4e8fc4ced_add_projects_table.py  1dea81b984c6_add_workflow_runs_state_json.py  37ed5633d338_remove_chunk_index_from_issues.py  3b1c8a9d2f04_add_mcp_oauth_kv_table.py  3f207b45e735_add_show_experimental_features_to_users.py  472f945f19b5_add_resolved_by_to_issues.py  47e2d7642ba2_create_files_table.py  4da476c9a29e_merge_share_links_and_files.py  638a72046e37_app_configs.py  67ccc59315f1_migrate_workflows_to_project.py  6c803193cd23_add_role_column_to_users_table.py  6f5eebe4f144_add_workflow_run_failure_heartbeat_.py  73cd1358c54c_add_gin_indexes.py  88eae8d7e7a6_add_rand_role_to_userrole_enum.py  8b28e2a42549_add_started_and_completed_dates_to_.py  8ece42fd6856_add_rate_limiter_buckets.py  8fed267f38a8_add_cancelled_status_to_workflow.py  90b84d00bfda_add_type_to_workflow_run.py  9dc9ecffd511_add_config_options_to_project_model.py  a03f3524ea71_add_revision_columns.py  a1012c54e54a_add_started_at_and_completed_at_to_.py  a1b2c3d4e5f6_add_share_links_table.py  a901c7ed0161_migrate_document_processing_separation.py  aef5202a5521_add_unique_contraint_to_user_email.py  b3d7e9f12a45_add_pg_trgm_extension.py  bc0838c50bec_add_issues_table_and_feedback_issue_fk.py  c3fa401e821b_remove_unneeded_workflow_run_columns.py  cbd53440b56f_add_file_artifact_columns.py  cdfa040a0771_create_files_table.py  dc6d4f17b026_make_workflow_project_optional.py  ddaeb39ae83a_add_encrypted_openai_api_key_to_users.py  f4ef6e0d9708_add_suggested_action_to_issues.py  f6c0d2582e72_add_index_to_workflow_run_project_id.py  f8b78f9b409e_add_project_id_index_to_files_table.py
api/: auth.py  dependencies.py  main.py  models.py  upload.py
api/routers/: analysis.py  app_configs.py  evaluation.py  feedback.py  files.py  health.py  issues.py  logs.py  progress.py  projects.py  public.py  share.py  tus_upload.py  upload.py  users.py  workflow_types.py  workflows.py
docs/: index.md  railway-deployment.md
evals_inspectai/: README.md  common.py
frontend/: .env.template  Dockerfile  auth.ts  middleware.ts  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml
k8s/: README.md  configmap.yaml  docling.yaml  network-policy.yaml
lib/: run_utils.py
scripts/: backfill_workflow_run_state_json.py
statistical_analysis_ver2/: binary_search.py  create_venv.py  execute_generated_code.py  query_executor.py
tests/: conftest.py  test_dependency_resolver.py  test_workflow_runner_skip_completed.py
(+1047 files in other folders)
