[project]
name = "ai-reviewer"
version = "0.1.0"
description = "AI-powered peer-review document analysis"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-postgres>=0.0.12",
    "langgraph>=1.0.0",
    "langfuse>=3.10.0",
    "pgvector>=0.2.5,<0.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.24",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-json-report>=1.5.0",
    "fastapi[standard]>=0.120.2",
    "deepdiff[optimize]>=8.6.1",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]>=3.2.10",
    "alembic-postgresql-enum>=1.8.0",
    "pytest-repeat>=0.9.4",
    "xxhash>=3.5.0",
    "langchain-text-splitters>=1.0.0",
    "nltk>=3.8.1",
    "httpx>=0.28.1",
    "numpy>=1.24.0",
    "python-docx>=1.1.0",
    "rapidfuzz>=3.0.0",
    "aiofiles>=25.1.0",
    "nest-asyncio>=1.6.0",
    "tabulate>=0.9.0",
    "python-magic>=0.4.27",
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.4",
    "pyjwt>=2.10.1",
    "mypy>=1.19.1",
    "aiolimiter>=1.2.1",
    "textblob>=0.18.0",
    "rich>=14.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--json-report",
    "--json-report-file=test_results.json",
    "--json-report-indent=2",
    "-v",
    "-n",
    "10",
    "--ignore=tests/evals",
    "--ignore=tests/integration"
]

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
]
